--- a/readme
+++ b/readme
@@ -7,6 +7,9 @@ is going to shut down.
 
 See the snapshot.
 https://code.google.com/p/alga-blooms/
+![qq20121002-1](https://cloud.githubusercontent.com/assets/1396867/15703965/2a24ab70-27e0-11e6-8be1-de23b5e2a40d.jpg)
+
+![watersample](https://cloud.githubusercontent.com/assets/1396867/15703964/2a138dd6-27e0-11e6-8162-e09e2d72f16a.jpg)
 
 Best,
 Jialin Liu
